<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/background" >
	
	<TextView
		android:text="@string/textSelectLevel"
		android:textColor="#000000"
		android:textSize="24sp"
	   	android:layout_width="fill_parent"
	   	android:layout_height="wrap_content"
	   	android:gravity="center_horizontal" />
	
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:gravity="center_vertical|center_horizontal">
		
	    <TableLayout
	        android:layout_width="fill_parent"
    		android:layout_height="wrap_content" >
	
		<TableRow >
	            	
				<Button
					android:id="@+id/ButtonLoadLevel01"
					android:gravity="center_horizontal"
					android:text="@string/nameLevel01"
					android:layout_width="fill_parent"
		    		android:layout_height="fill_parent" >
				</Button>
			
				<Button
					android:id="@+id/ButtonLoadLevel02"
					android:gravity="center_horizontal"
					android:text="@string/nameLevel02"
					android:layout_width="fill_parent"
		    		android:layout_height="fill_parent" >
				</Button>
				
				<Button
					android:id="@+id/ButtonLoadLevel03"
					android:gravity="center_horizontal"
					android:text="@string/nameLevel03"
					android:layout_width="fill_parent"
		    		android:layout_height="fill_parent" >
				</Button>
	
		</TableRow>
		
		<TableRow >
	            	
				<Button
					android:id="@+id/ButtonLoadLevel04"
					android:gravity="center_horizontal"
					android:text="@string/nameLevel04"
					android:layout_width="wrap_content"
		    		android:layout_height="wrap_content" >
				</Button>
			
				<Button
					android:id="@+id/ButtonLoadLevel05"
					android:gravity="center_horizontal"
					android:text="@string/nameLevel05"
					android:layout_width="wrap_content"
		    		android:layout_height="wrap_content" >
				</Button>
				
				<Button
					android:id="@+id/ButtonLoadLevel06"
					android:gravity="center_horizontal"
					android:text="@string/nameLevel06"
					android:layout_width="wrap_content"
		    		android:layout_height="wrap_content" >
				</Button>
	
		</TableRow>
		
		<TableRow>
	            	
				<Button
					android:id="@+id/ButtonLoadLevel07"
					android:gravity="center_horizontal"
					android:text="@string/nameLevel07"
					android:layout_width="wrap_content"
		    		android:layout_height="wrap_content" >
				</Button>
			
				<Button
					android:id="@+id/ButtonLoadLevel08"
					android:gravity="center_horizontal"
					android:text="@string/nameLevel08"
					android:layout_width="wrap_content"
		    		android:layout_height="wrap_content" >
				</Button>
				
				<Button
					android:id="@+id/ButtonLoadLevel09"
					android:gravity="center_horizontal"
					android:text="@string/nameLevel09"
					android:layout_width="wrap_content"
		    		android:layout_height="wrap_content" >
				</Button>
	
		</TableRow>
		
		<TableRow >
	            	
				<Button
					android:id="@+id/ButtonLoadLevel10"
					android:gravity="center_horizontal"
					android:text="@string/nameLevel10"
					android:layout_width="wrap_content"
		    		android:layout_height="wrap_content" >
				</Button>
			
				<Button
					android:id="@+id/ButtonLoadLevel11"
					android:gravity="center_horizontal"
					android:text="@string/nameLevel11"
					android:layout_width="wrap_content"
		    		android:layout_height="wrap_content" >
				</Button>
				
				<Button
					android:id="@+id/ButtonLoadLevel12"
					android:gravity="center_horizontal"
					android:text="@string/nameLevel12"
					android:layout_width="wrap_content"
		    		android:layout_height="wrap_content" >
				</Button>
	
		</TableRow>
		
		<TableRow >
	            	
				<Button
					android:id="@+id/ButtonLoadLevel13"
					android:gravity="center_horizontal"
					android:text="@string/nameLevel13"
					android:layout_width="wrap_content"
		    		android:layout_height="wrap_content" >
				</Button>
			
				<Button
					android:id="@+id/ButtonLoadLevel14"
					android:gravity="center_horizontal"
					android:text="@string/nameLevel14"
					android:layout_width="wrap_content"
		    		android:layout_height="wrap_content" >
				</Button>
				
				<Button
					android:id="@+id/ButtonLoadLevel15"
					android:gravity="center_horizontal"
					android:text="@string/nameLevel15"
					android:layout_width="wrap_content"
		    		android:layout_height="wrap_content" >
				</Button>
	
		</TableRow>
		
		</TableLayout>
		
	</LinearLayout>
	
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="5"
		android:gravity="bottom|right" >
		
		<Button
		    android:id="@+id/buttonBackToMenu"
		    android:text="@string/choiceBack"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content" >
		</Button>
	
	</LinearLayout>
	
</LinearLayout>