<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/background"
              android:orientation="vertical">

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_weight="1"
      android:gravity="center_vertical|center_horizontal"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

      <Button
          android:id="@+id/buttonLevels"
          android:layout_width="225dp"
          android:layout_height="175dp"
          android:text="@string/choicePlay"
          android:textSize="48sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="4"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

      <Button
          android:id="@+id/buttonScores"
          android:layout_width="175dp"
          android:layout_height="50dp"
          android:text="@string/choiceScores"
          android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="4"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

      <Button
          android:id="@+id/buttonTutorial"
          android:layout_width="175dp"
          android:layout_height="50dp"
          android:text="@string/choiceTutorial"
          android:textSize="12sp" />

    </LinearLayout>

  </LinearLayout>

  <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_weight="5"
      android:gravity="bottom|right"
      android:orientation="vertical">

    <Button
        android:id="@+id/buttonBackToTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choiceBack" />

  </LinearLayout>

</LinearLayout>