<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/background" >
	
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1" >
		
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1" >
		
			<ScrollView android:layout_marginBottom="10dip" android:layout_height="wrap_content" android:layout_width="fill_parent">
		          
				<TextView
					android:id="@+id/TutoText"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:textColor="#000000"
					android:textSize="15sp" />
		          
			</ScrollView>
	
		</LinearLayout>
		
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="2"
			android:gravity="center" >
     
			<ImageView
				android:id="@+id/TutoImage"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
				
		</LinearLayout>
	
	</LinearLayout>
	
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="5"
		android:gravity="bottom|right" >
		
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:gravity="bottom|right" >
			
			<Button
			    android:id="@+id/buttonPreviousLesson"
			    android:text="@string/choicePrevious"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" >
			</Button>
			
		</LinearLayout>
			
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:gravity="bottom|left" >
			
			<Button
			    android:id="@+id/buttonNextLesson"
			    android:text="@string/choiceNext"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" >
			</Button>
		
		</LinearLayout>
			
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:gravity="bottom|right" >
			
			<Button
			    android:id="@+id/buttonBackToMenu"
			    android:text="@string/choiceBack"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content" >
			</Button>
		
		</LinearLayout>
	
	</LinearLayout>

</LinearLayout>